fix: align with name left side

--- a/src/components/HumanCardPage/human-card-page.scss
+++ b/src/components/HumanCardPage/human-card-page.scss
@@ -77,7 +77,7 @@
     }
   
     .human-page-breadcrumb {
-      margin-left: 235px;
+      margin-left: 238px;
   
       a, span {
         display: inline-block;
